@@ -1,5 +1,5 @@
 Package: igraph
-Version: 0.4.2
+Version: 0.4.3
 Date: May 28, 2007
 Title:  Routines for simple graphs, network analysis.
 Author: Gabor Csardi <csardi@rmki.kfki.hu>
